[tool.poetry]
name = "pytube-client"
version = "0.1.10"
description = "A Python package tailored for seamless interaction with the YouTube Data API. Designed for simplicity and flexibility, this package empowers developers to effortlessly incorporate YouTube functionalities into their applications."
authors = ["Ian Dancun <dancoonmwangi@gmail.com>", "Daniel Karume <danielkarume@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dancoon/pytube-client"
keywords = ["youtube", "api", "data", "video", "audio", "stream", "download", "caption", "subtitle", "thumbnail", "search", "channel", "playlist", "video", "audio", "stream", "download", "caption", "subtitle", "thumbnail", "search", "channel", "playlist"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    {include = "pytube_client"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
